# PythonBelgrade

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  Pipfile  README.md  generate_rst.py  pyproject.toml
docs/: meetups.json  requirements.txt  speakers.json
docs/source/: conf.py  index.rst  qr.rst
docs/source/articles/: index.rst
docs/source/json-data/: articles.json  meetups.json  speakers.json
docs/source/meetups/: 2022_02_18.rst  2022_03_25.rst  2022_04_29.rst  2022_08_22.rst  index.rst  meetup_1.rst  meetup_10.rst  meetup_11.rst  meetup_12.rst  meetup_13.rst  meetup_14.rst  meetup_15.rst  meetup_16.rst  meetup_17.rst  meetup_18.rst  meetup_19.rst  meetup_2.rst  meetup_20.rst  meetup_21.rst  meetup_22.rst  meetup_23.rst  meetup_24.rst  meetup_25.rst  meetup_26.rst  meetup_27.rst  meetup_28.rst  meetup_29.rst  meetup_3.rst  meetup_30.rst  meetup_31.rst  meetup_32.rst  meetup_33.rst  meetup_34.rst  meetup_35.rst  meetup_36.rst  meetup_37.rst  meetup_38.rst  meetup_39.rst  meetup_4.rst  meetup_40.rst  (+35 more)
docs/source/membership/: index.rst  members.rst  telegram.rst
docs/source/speakers/: index.rst  speaker_1.rst  speaker_10.rst  speaker_11.rst  speaker_12.rst  speaker_13.rst  speaker_14.rst  speaker_15.rst  speaker_16.rst  speaker_17.rst  speaker_18.rst  speaker_19.rst  speaker_2.rst  speaker_20.rst  speaker_21.rst  speaker_22.rst  speaker_23.rst  speaker_24.rst  speaker_25.rst  speaker_26.rst  speaker_27.rst  speaker_28.rst  speaker_29.rst  speaker_3.rst  speaker_30.rst  speaker_31.rst  (+45 more)
src/: const.py  loading.py  loading.pyi  meetups.py  speakers.py
(+4 files in other folders)
